# RaytracingCamp2019

./: .gitignore  README.md
data/: anago.gltf  bluebg.hdr  config.json  input.gltf  scene.gltf
data/testscene/: anim_test.gltf  box00.gltf  minscene01.gltf  testscene01.gltf
datas/: config.json
datas/model/: test01.glb  test01.gltf
etc/2023/pentan_cpu/: run.py
etc/2023/pentan_cpu/data/: config.json
etc/2023/scene/: anim_test.blend  scene.blend
src/: CMakeLists.txt
src/sources/: CMakeLists.txt
src/sources/linearalgebra/: linearalgebra.h  quaternion.h  quaternion.inl
src/sources/pinkycore/: aabb.cc  aabb.h  animation.h  assetlibrary.cc  assetlibrary.h  bvh.cc  bvh.h  camera.cc  camera.h  config.cc  config.h  framebuffer.cc  framebuffer.h  intersection.h  keyframesampler.cc  keyframesampler.h  light.cc  light.h  material.cc  material.h  mesh.cc  mesh.h  node.cc  node.h  postprocessor.cc  postprocessor.h  pptypes.h  ray.h  renderer.cc  renderer.h  renderscheduler.h  scene.cc  scene.h  texture.cc  texture.h  tracablestructure.cc  tracablestructure.h
src/sources/pinkypi/: main.cc  sceneloader.cc  sceneloader.h
src/sources/pinkywrrt/: main.cc  sceneconverter.cc  sceneconverter.h
src/sources/rrtcore/: Makefile  aabb.cc  aabb.h  abstracttonemapper.cc  abstracttonemapper.h  camera.cc  camera.h  commandqueue.cc  commandqueue.h  eduptscene.cc  eduptscene.h  intersection.cc  intersection.h  r1htypes.h  random.h  ray.h  renderer.cc  renderer.h  scene.cc  scene.h  sceneobject.cc  sceneobject.h  scenesupport.cc  scenesupport.h  xmlobjloader.cc  xmlobjloader.h  xmlscene.cc  xmlscene.h
src/sources/rrtcore/bsdfs/: bsdf.cc  bsdf.h  bsdf_include.h  burley.cc  burley.h  fullreflection.cc  fullreflection.h  fullrefraction.cc  fullrefraction.h  ggx.cc  ggx.h  lambert.cc  lambert.h  translucent.cc  translucent.h
src/sources/rrtcore/geometries/: aabbgeometry.cc  aabbgeometry.h  geometry.h  geometry_include.h  mesh.cc  mesh.h  sphere.cc  sphere.h
src/sources/rrtcore/materials/: fineglass.cpp  fineglass.h  lightmaterial.cpp  lightmaterial.h  material.cpp  material.h  material_include.h  pbrrmmaterial.cpp  pbrrmmaterial.h  singlebsdfmaterial.cpp  singlebsdfmaterial.h  skymaterial.cc  skymaterial.h  sppmaterial.cpp  sppmaterial.h
src/sources/rrtcore/textures/: imagetexture.cc  imagetexture.h  noisetextures.cc  noisetextures.h  texture.cc  texture.h  texture_include.h
src/sources/rrtcore/vqmmath/: constants.h  matrix4.h  matrix4.inl  vector3.h  vector3.inl  vector4.h  vector4.inl
src/tests/: CMakeLists.txt  testconfig.h  testmain.cc  testsupport.cc  testsupport.h
src/tests/appTests/: sceneloaderTests.cc
src/tests/coreTests/: aabbTests.cc  animationTests.cc  configTests.cc  framebufferTests.cc  randomTests.cc  rayTests.cc  textureTests.cc
src/tests/linearalgebraTests/: Matrix4Tests.cc  QuaternionTests.cc  Vector3Tests.cc  Vector4Tests.cc
src/tests/testdata/config/: testconfig00.json
